zombie_revived.css

--- a/zombie_revived.css
+++ b/zombie_revived.css
@@ -3091,3 +3091,12 @@ div#loginPage {
 #loginPage .inputContainer:focus-within {
   background: #454545;
 }
+
+:root {
+  --accent: 174, 192, 240;       /* Teal */
+  --accent-off: 100, 124, 131;   /* Storm Gray */
+  --dark: 45, 52, 54;            /* Gunmetal Gray */
+  --darkest: 25, 29, 31;         /* Jet Black */
+  --dark-highlight: 60, 71, 73;  /* Dark Slate */
+  --dark-apparent: 22, 34, 33;   /* Charcoal Gray */
+}
